--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html, body {
 }
 
 #audioBtn {
-    background: url(icons8-mute-24.png);
+    background: url(media/icons8-mute-24.png);
     border: none;
     height: 8%;
     width: 6%;
